--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html class="no-js">
 <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Media Query HW</title>
     <meta name="description" content="">
+    <meta name=”viewport” content=”width=device-width, initial-scale=1”>
 
     <link rel="stylesheet" href="css/vendor/normalize.min.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.css" media="screen">
     <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
